--- a/tbsetup/snmpit.in
+++ b/tbsetup/snmpit.in
@@ -44,6 +44,7 @@ sub doRecreateVlans($);
 sub doTrunkEnable($$@);
 sub doTrunkDisable($$);
 sub doRestorePortStatus($@);
+sub doSynchLeader($);
 
 #
 # Defaults
